# neuralboy

./: .gitignore  CMakeLists.txt  README.md  activations.cpp  activations.h  data_helper.cpp  data_helper.h  file_helper.cpp  loss_log  main.cpp  net_helper.cpp  net_helper.h  plot_loss.py
